[package]
name = "collab-mode"
version = "0.1.0"
edition = "2021"
authors = ["Yuan Fu <casouri@gmail.com>"]
description = "One-stop-shop for collaborative editing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.71"
rand = "0.8.5"
gapbuf = "0.1.4"
log = "0.4.18"
env_logger = "0.10.0"
clap = { version = "4.3.3", features = ["derive", "cargo"] }
enum_dispatch = "0.3.11"
uuid = { version = "1.3.4", features = ["v4"]}

lsp-server = "0.7.0"

serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
bincode = "1.3.3"

async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "time"]}
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = "0.7.8"
futures = "0.3"
futures-util = "0.3"

tokio-tungstenite = "0.20.0"
webrtc-ice = "0.9.1"
webrtc-data = "0.7.0"
webrtc-util = "0.7.0"
webrtc-sctp = "0.8.0"
bytes = "1.4.0"


# https://github.com/johnthagen/min-sized-rust
[profile.release]
# strip = true  # Strip symbols from the binary.
lto = true # Link Time Optimization.
opt-level = "z"  # Optimize for size.
