[workspace]
resolver = "2"
members = ["collab_mode", "test_server"]

[workspace.dependencies]
collab_mode = { path = "./collab_mode", version = "0.1.0" }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
# strip = true  # Strip symbols from the binary.
lto = true # Link Time Optimization.
opt-level = "z"  # Optimize for size.
