[package]
name = "collab_mode"
version = "0.1.0"
edition = "2021"
authors = ["Yuan Fu <casouri@gmail.com>"]
description = "One-stop-shop for collaborative editing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "collab-signal"
path = "src/bin/collab-signal.rs"

[[bin]]
name = "test-editor-receptor"
path = "src/bin/test_editor_receptor.rs"

[[bin]]
name = "test-websocket-receptor"
path = "src/bin/test_websocket_receptor.rs"

[[bin]]
name = "transcript-runner"
path = "src/bin/transcript-runner.rs"

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.71"
rand = "0.8.5"
gapbuf = "0.1.4"
log = "0.4.18"
env_logger = "0.10.0"
clap = { version = "4.3.3", features = ["derive", "cargo"] }
enum_dispatch = "0.3.11"
uuid = { version = "1.3.4", features = ["v4"]}
pathdiff = "0.2.1"
xdg = "3.0.0"
sha2 = "0.10.8"
pem = "3.0.4"
expanduser = "1.2.2"
tempfile = "3.8.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-log = "0.2.0"

lsp-server = "0.7.0"

serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
serde_with = "3.14.0"
bincode = "1.3.3"

async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "time"]}
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = "0.7.8"
futures = "0.3"
futures-util = "0.3"

tokio-tungstenite = { version = "0.20.0", features = ["native-tls"]}
# Make sure the version of webrtc-util matches the one that's used by
# webrtc-ice, webrtc-sctp, and webrtc-dtls.
webrtc-ice = "0.10.0"
webrtc-util = "0.8.0"
webrtc-sctp = "0.9.0"
webrtc-dtls = "0.8.0"
bytes = "1.4.0"
# This is the version used by webrtc-dtls.
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"]}
# This is the version used by webrtc-dtls.
rustls = "0.21.10"

rusqlite = { version = "0.31.0", features = ["bundled"] }
fmt-derive = "0.1.2"

[features]
test-runner = []
