[package]
name = "collab_mode"
version = "0.1.0"
edition = "2021"
authors = ["Yuan Fu <casouri@gmail.com>"]
description = "One-stop-shop for collaborative editing"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "collab-signal"
path = "src/bin/collab-signal.rs"

[[bin]]
name = "test-editor-receptor"
path = "src/bin/test_editor_receptor.rs"

[[bin]]
name = "test-websocket-receptor"
path = "src/bin/test_websocket_receptor.rs"

[[bin]]
name = "test-filewatch-probe"
path = "src/bin/test_filewatch.rs"

[[bin]]
name = "test-hash-speed"
path = "src/bin/test_hash_speed.rs"

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.71"
rand = "0.8.5"
gapbuf = "0.1.4"
log = "0.4.18"
env_logger = "0.10.0"
clap = { version = "4.3.3", features = ["derive", "cargo"] }
enum_dispatch = "0.3.11"
uuid = { version = "1.3.4", features = ["v4"]}
pathdiff = "0.2.1"
xdg = "3.0.0"
sha2 = "0.10.8"
md-5 = "0.10"
pem = "3.0.4"
expanduser = "1.2.2"
hostname = "0.4"
tempfile = "3.8.0"
content_inspector = "0.2"
notify = "8"
dissimilar = "1"
crossbeam-channel = "0.5"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-log = "0.2.0"

lsp-server = "0.7.0"

serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
serde_with = "3.14.0"
serde_repr = "0.1"
bincode = "1.3.3"

tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "time", "io-util", "process"]}
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = "0.7.8"
futures = "0.3"
futures-util = "0.3"

tokio-tungstenite = { version = "0.20.0", features = ["native-tls"]}
# Make sure the version of webrtc-util matches the one that's used by
# webrtc-ice, webrtc-sctp, and webrtc-dtls.
webrtc-ice = "0.13.0"
webrtc-util = "0.11.0"
webrtc-sctp = "0.12.0"
webrtc-dtls = "0.12.0"
bytes = "1.4.0"
# This is the version used by webrtc-dtls.
rcgen = { version = "0.13", features = ["pem", "x509-parser"]}
# This is the version used by webrtc-dtls.
rustls = "0.23.27"
rustls-pki-types = "1.0"
# For application-layer auth on the signaling Bind message.
ring = "0.17"
x509-parser = "0.16"
base64 = "0.22"

rusqlite = { version = "0.31.0", features = ["bundled"] }
fmt-derive = "0.1.2"

openssh = "0.11"
