[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
collab_mode = { workspace = true}

tiny_http = "0.11"
url = "2.5.4"

anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"

rusqlite = { version = "0.31.0", features = ["bundled"] }
